Fixed Scrollbar

--- a/src/components/Hero/HeroStyle.css
+++ b/src/components/Hero/HeroStyle.css
@@ -9,6 +9,7 @@
     ),
     url(https://images.unsplash.com/photo-1524813686514-a57563d77965?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332&q=80);
   background-size: contain;
+  overflow-y: hidden;
 }
 
 .hero-container {
@@ -18,7 +19,6 @@
   top: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  overflow: hidden;
 }
 
 .h1-hero {
